--- a/orders.html
+++ b/orders.html
@@ -25,7 +25,7 @@
 
     <script>
         // sample datasource
-        var aggregate_order_records = [];
+        var aggregate_order_records = [{'symbol': 'TCB', 'refer_price': 27600.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0, 'phi': -2675, 'thue': -267500, 'PNL': -2677675, 'avg_buy_price': '26750', 'avg_sell_price': '', 'buy_to_basic': '-3.1', 'sell_to_basic': ''}];
 
         $(document).ready(function() {
             $("#aggregate_order_table").kendoGrid({
@@ -33,7 +33,7 @@
                     data: aggregate_order_records,
                     //pageSize: 5,
                     schema: {
-                        model: {'fields': {}}
+                        model: {'fields': {'symbol': {}, 'refer_price': {'type': 'number'}, 'total_trading': {'type': 'number'}, 'total_buy': {'type': 'number'}, 'total_sell': {'type': 'number'}, 'phi': {'type': 'number'}, 'thue': {'type': 'number'}, 'PNL': {'type': 'number'}, 'avg_buy_price': {}, 'avg_sell_price': {}, 'buy_to_basic': {}, 'sell_to_basic': {}}}
                     },
                     aggregate: [{'field': 'PNL', 'aggregate': 'sum'}, {'field': 'phi', 'aggregate': 'sum'}, {'field': 'thue', 'aggregate': 'sum'}, {'field': 'total_trading', 'aggregate': 'sum'}]
                 },
@@ -48,13 +48,13 @@
                         this.autoFitColumn(i);
                     }
                 },
-                toolbar: ["TCBS T0 Orders at 2022-12-26 09:47:06.962763", "search"],
+                toolbar: ["TCBS T0 Orders at 2022-12-26 09:48:07.301867", "search"],
                 search: {
                     fields: [
                         { name: "symbol", operator: "contains" },
                     ]
                 },
-                columns: [],
+                columns: [{'field': 'symbol', 'title': 'symbol', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}}, {'field': 'refer_price', 'title': 'refer_price', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(refer_price)#'}, {'field': 'total_trading', 'title': 'total_trading', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(total_trading)#', 'footerTemplate': '#: kendo.format("{0:n0}",sum) #'}, {'field': 'total_buy', 'title': 'total_buy', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(total_buy)#'}, {'field': 'total_sell', 'title': 'total_sell', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(total_sell)#'}, {'field': 'phi', 'title': 'phi', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(phi)#', 'footerTemplate': '#: kendo.format("{0:n0}",sum) #'}, {'field': 'thue', 'title': 'thue', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(thue)#', 'footerTemplate': '#: kendo.format("{0:n0}",sum) #'}, {'field': 'PNL', 'title': 'PNL', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}, 'format': '{0:n0}', 'template': '#=SetColor(PNL)#', 'footerTemplate': '#: kendo.format("{0:n0}",sum) #'}, {'field': 'avg_buy_price', 'title': 'avg_buy_price', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}}, {'field': 'avg_sell_price', 'title': 'avg_sell_price', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}}, {'field': 'buy_to_basic', 'title': 'buy_to_basic', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}}, {'field': 'sell_to_basic', 'title': 'sell_to_basic', 'attributes': {'style': 'text-align: right'}, 'filterable': {'multi': 'true'}}],
             });
         });
 
