--- a/orders.html
+++ b/orders.html
@@ -25,7 +25,7 @@
 
     <script>
         // sample datasource
-        var aggregate_order_records = [{'symbol': 'TCB', 'refer_price': 27600.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0, 'phi': -2675, 'thue': -267500, 'PNL': -2677675, 'avg_buy_price': '26750', 'avg_sell_price': '', 'buy_to_basic': '-3.1', 'sell_to_basic': ''}];
+        var aggregate_order_records = [{'symbol': 'TCB', 'refer_price': 27600.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0, 'phi': -2675, 'thue': -267500, 'PNL': -2677675, 'avg_buy_price': '26750', 'avg_sell_price': '', 'buy_to_basic': '-3.1', 'sell_to_basic': ''}, {'symbol': 'VHM', 'refer_price': 49800.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0, 'phi': -4830, 'thue': -483000, 'PNL': -4834830, 'avg_buy_price': '48300', 'avg_sell_price': '', 'buy_to_basic': '-3.0', 'sell_to_basic': ''}];
 
         $(document).ready(function() {
             $("#aggregate_order_table").kendoGrid({
@@ -48,7 +48,7 @@
                         this.autoFitColumn(i);
                     }
                 },
-                toolbar: ["TCBS T0 Orders at 2022-12-26 10:25:09.548932", "search"],
+                toolbar: ["TCBS T0 Orders at 2022-12-26 10:26:07.402744", "search"],
                 search: {
                     fields: [
                         { name: "symbol", operator: "contains" },
