--- a/orders.html
+++ b/orders.html
@@ -25,7 +25,7 @@
 
     <script>
         // sample datasource
-        var aggregate_order_records = [{'symbol': 'TCB', 'refer_price': 27600.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0.0, 'phi': -2675, 'thue': -267500.0, 'PNL': -2677675, 'avg_buy_price': '26750', 'avg_sell_price': '', 'buy_to_basic': '-3.1', 'sell_to_basic': ''}, {'symbol': 'VHM', 'refer_price': 49800.0, 'total_trading': -200.0, 'total_buy': 100.0, 'total_sell': -300.0, 'phi': -19425, 'thue': -497595.0, 'PNL': 9745575, 'avg_buy_price': '48300', 'avg_sell_price': '48650', 'buy_to_basic': '-3.0', 'sell_to_basic': '-2.3'}];
+        var aggregate_order_records = [{'symbol': 'HSG', 'refer_price': 11800.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0.0, 'phi': -1130, 'thue': -113000.0, 'PNL': -1131130, 'avg_buy_price': '11300', 'avg_sell_price': '', 'buy_to_basic': '-4.2', 'sell_to_basic': ''}, {'symbol': 'PAN', 'refer_price': 15650.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0.0, 'phi': -1515, 'thue': -151500.0, 'PNL': -1516515, 'avg_buy_price': '15150', 'avg_sell_price': '', 'buy_to_basic': '-3.2', 'sell_to_basic': ''}, {'symbol': 'TCB', 'refer_price': 27600.0, 'total_trading': 100.0, 'total_buy': 100.0, 'total_sell': 0.0, 'phi': -2675, 'thue': -267500.0, 'PNL': -2677675, 'avg_buy_price': '26750', 'avg_sell_price': '', 'buy_to_basic': '-3.1', 'sell_to_basic': ''}, {'symbol': 'VHM', 'refer_price': 49800.0, 'total_trading': -200.0, 'total_buy': 100.0, 'total_sell': -300.0, 'phi': -19425, 'thue': -497595.0, 'PNL': 9745575, 'avg_buy_price': '48300', 'avg_sell_price': '48650', 'buy_to_basic': '-3.0', 'sell_to_basic': '-2.3'}];
 
         $(document).ready(function() {
             $("#aggregate_order_table").kendoGrid({
@@ -48,7 +48,7 @@
                         this.autoFitColumn(i);
                     }
                 },
-                toolbar: ["TCBS T0 Orders at 2022-12-26 11:28:07.076162", "search"],
+                toolbar: ["TCBS T0 Orders at 2022-12-26 11:29:06.812883", "search"],
                 search: {
                     fields: [
                         { name: "symbol", operator: "contains" },
