--- a/orders.html
+++ b/orders.html
@@ -25,7 +25,7 @@
 
     <script>
         // sample datasource
-        var aggregate_order_records = [{'symbol': 'POW', 'refer_price': 10300.0, 'total_trading': -100.0, 'total_buy': 0, 'total_sell': -100.0, 'phi': -1050, 'thue': -1050.0, 'PNL': 1048950, 'avg_buy_price': '', 'avg_sell_price': '10500', 'buy_to_basic': '', 'sell_to_basic': '1.9'}];
+        var aggregate_order_records = [{'symbol': 'PLX', 'refer_price': 30200.0, 'total_trading': -100.0, 'total_buy': 0, 'total_sell': -100.0, 'phi': -3020, 'thue': -3020.0, 'PNL': 3016980, 'avg_buy_price': '', 'avg_sell_price': '30200', 'buy_to_basic': '', 'sell_to_basic': '0.0'}, {'symbol': 'POW', 'refer_price': 10300.0, 'total_trading': -100.0, 'total_buy': 0, 'total_sell': -100.0, 'phi': -1050, 'thue': -1050.0, 'PNL': 1048950, 'avg_buy_price': '', 'avg_sell_price': '10500', 'buy_to_basic': '', 'sell_to_basic': '1.9'}];
 
         $(document).ready(function() {
             $("#aggregate_order_table").kendoGrid({
@@ -48,7 +48,7 @@
                         this.autoFitColumn(i);
                     }
                 },
-                toolbar: ["TCBS T0 Orders at 2022-12-27 09:53:07.401369", "search"],
+                toolbar: ["TCBS T0 Orders at 2022-12-27 09:54:07.397699", "search"],
                 search: {
                     fields: [
                         { name: "symbol", operator: "contains" },
