--- a/Dividend events.html
+++ b/Dividend events.html
@@ -27,7 +27,7 @@
         <body>
             <div>
                 <h2> Top dividend events </h2>
-                <p><em> 2022-12-27 11:15:34.313272 </em></p>
+                <p><em> 2022-12-27 11:30:33.594567 </em></p>
                 <h4>Sorted by newest notification<h4><table border="1" class="dataframe">
   <thead>
     <tr style="text-align: right;">
@@ -51,6 +51,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>DHA</td>
+      <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
+      <td>2022-12-27</td>
+      <td>2023-01-03</td>
+      <td>3000.0</td>
+      <td>0.0</td>
+      <td>2023-01-02</td>
+      <td>6 days</td>
+      <td>36000.0</td>
+      <td>35300.0</td>
+      <td>8.50</td>
+      <td>-1.94</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -67,7 +84,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -84,7 +101,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>MCC</td>
       <td>MCC - Trả cổ tức Cả năm năm 2021 bằng tiền 300 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -101,7 +118,7 @@
       <td><a href="https://simplize.vn/company/MCC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>MND</td>
       <td>MND - Trả cổ tức Đợt 1 năm 2022 bằng tiền 129.3 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -118,7 +135,7 @@
       <td><a href="https://simplize.vn/company/MND" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>MND</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-23</td>
@@ -135,7 +152,7 @@
       <td><a href="https://simplize.vn/company/MND" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>PNJ</td>
       <td>PNJ - Phát hành cổ phiếu thưởng tỷ lệ 33.33%</td>
       <td>2022-12-23</td>
@@ -145,14 +162,14 @@
       <td>2022-12-28</td>
       <td>1 days</td>
       <td>109000.0</td>
-      <td>108900.0</td>
+      <td>108800.0</td>
       <td>0.00</td>
-      <td>-0.09</td>
+      <td>-0.18</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>SVC</td>
       <td>SVC - Phát hành cổ phiếu thưởng tỷ lệ 100%</td>
       <td>2022-12-23</td>
@@ -169,7 +186,7 @@
       <td><a href="https://simplize.vn/company/SVC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -179,14 +196,14 @@
       <td>2023-01-04</td>
       <td>8 days</td>
       <td>51900.0</td>
-      <td>50800.0</td>
-      <td>1.97</td>
-      <td>-2.12</td>
+      <td>50600.0</td>
+      <td>1.98</td>
+      <td>-2.50</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=FOX" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -203,7 +220,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -220,7 +237,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>TIP</td>
       <td>TIP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -237,7 +254,7 @@
       <td><a href="https://simplize.vn/company/TIP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>TLG</td>
       <td>TLG - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -247,14 +264,14 @@
       <td>2022-12-28</td>
       <td>1 days</td>
       <td>49950.0</td>
-      <td>49800.0</td>
-      <td>3.01</td>
-      <td>-0.30</td>
+      <td>49600.0</td>
+      <td>3.02</td>
+      <td>-0.70</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TLG" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TLG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>HNP</td>
       <td>HNP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -271,7 +288,7 @@
       <td><a href="https://simplize.vn/company/HNP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>AGR</td>
       <td>AGR - Phát hành cổ phiếu thưởng tỷ lệ 1.602%</td>
       <td>2022-12-20</td>
@@ -281,14 +298,14 @@
       <td>2022-12-27</td>
       <td>0 days</td>
       <td>8550.0</td>
-      <td>7390.0</td>
+      <td>7400.0</td>
       <td>0.00</td>
-      <td>-13.57</td>
+      <td>-13.45</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=AGR" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/AGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>HLD</td>
       <td>HLD - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -305,7 +322,7 @@
       <td><a href="https://simplize.vn/company/HLD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -315,14 +332,14 @@
       <td>2023-01-16</td>
       <td>20 days</td>
       <td>19200.0</td>
-      <td>17000.0</td>
-      <td>3.53</td>
-      <td>-11.46</td>
+      <td>17050.0</td>
+      <td>3.52</td>
+      <td>-11.20</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=BFC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>PAI</td>
       <td>PAI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -339,7 +356,7 @@
       <td><a href="https://simplize.vn/company/PAI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>DHP</td>
       <td>DHP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -356,7 +373,7 @@
       <td><a href="https://simplize.vn/company/DHP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -366,14 +383,14 @@
       <td>2023-03-01</td>
       <td>64 days</td>
       <td>177327.0</td>
-      <td>176000.0</td>
+      <td>175500.0</td>
       <td>0.57</td>
-      <td>-0.75</td>
+      <td>-1.03</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -383,14 +400,14 @@
       <td>2023-01-10</td>
       <td>14 days</td>
       <td>22000.0</td>
-      <td>20350.0</td>
+      <td>20300.0</td>
       <td>2.46</td>
-      <td>-7.50</td>
+      <td>-7.73</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>HFB</td>
       <td>HFB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-02</td>
@@ -430,6 +447,23 @@
   <tbody>
     <tr>
       <th>0</th>
+      <td>DHA</td>
+      <td>DHA - Trả cổ tức Đợt 1 năm 2022 bằng tiền 3000 đồng/cổ phiếu</td>
+      <td>2022-12-27</td>
+      <td>2023-01-03</td>
+      <td>3000.0</td>
+      <td>0.0</td>
+      <td>2023-01-02</td>
+      <td>6 days</td>
+      <td>36000.0</td>
+      <td>35300.0</td>
+      <td>8.50</td>
+      <td>-1.94</td>
+      <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DHA" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
+      <td><a href="https://simplize.vn/company/DHA" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
+    </tr>
+    <tr>
+      <th>1</th>
       <td>QNS</td>
       <td>QNS - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-26</td>
@@ -446,7 +480,7 @@
       <td><a href="https://simplize.vn/company/QNS" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>1</th>
+      <th>2</th>
       <td>TTD</td>
       <td>TTD - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -463,7 +497,7 @@
       <td><a href="https://simplize.vn/company/TTD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>2</th>
+      <th>3</th>
       <td>MCC</td>
       <td>MCC - Trả cổ tức Cả năm năm 2021 bằng tiền 300 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -480,7 +514,7 @@
       <td><a href="https://simplize.vn/company/MCC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>3</th>
+      <th>4</th>
       <td>MND</td>
       <td>MND - Trả cổ tức Đợt 1 năm 2022 bằng tiền 129.3 đồng/cổ phiếu</td>
       <td>2022-12-23</td>
@@ -497,7 +531,7 @@
       <td><a href="https://simplize.vn/company/MND" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>4</th>
+      <th>5</th>
       <td>MND</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-23</td>
@@ -514,7 +548,7 @@
       <td><a href="https://simplize.vn/company/MND" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>5</th>
+      <th>6</th>
       <td>PNJ</td>
       <td>PNJ - Phát hành cổ phiếu thưởng tỷ lệ 33.33%</td>
       <td>2022-12-23</td>
@@ -524,14 +558,14 @@
       <td>2022-12-28</td>
       <td>1 days</td>
       <td>109000.0</td>
-      <td>108900.0</td>
+      <td>108800.0</td>
       <td>0.00</td>
-      <td>-0.09</td>
+      <td>-0.18</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=PNJ" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/PNJ" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>6</th>
+      <th>7</th>
       <td>SVC</td>
       <td>SVC - Phát hành cổ phiếu thưởng tỷ lệ 100%</td>
       <td>2022-12-23</td>
@@ -548,7 +582,7 @@
       <td><a href="https://simplize.vn/company/SVC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>7</th>
+      <th>8</th>
       <td>FOX</td>
       <td>Trả cổ tức bằng tiền mặt</td>
       <td>2022-12-22</td>
@@ -558,14 +592,14 @@
       <td>2023-01-04</td>
       <td>8 days</td>
       <td>51900.0</td>
-      <td>50800.0</td>
-      <td>1.97</td>
-      <td>-2.12</td>
+      <td>50600.0</td>
+      <td>1.98</td>
+      <td>-2.50</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=FOX" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/FOX" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>8</th>
+      <th>9</th>
       <td>ND2</td>
       <td>ND2 - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-22</td>
@@ -582,7 +616,7 @@
       <td><a href="https://simplize.vn/company/ND2" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>9</th>
+      <th>10</th>
       <td>GKM</td>
       <td>GKM - Phát hành cổ phiếu trả cổ tức tỷ lệ 10%</td>
       <td>2022-12-22</td>
@@ -599,7 +633,7 @@
       <td><a href="https://simplize.vn/company/GKM" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>10</th>
+      <th>11</th>
       <td>TIP</td>
       <td>TIP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -616,7 +650,7 @@
       <td><a href="https://simplize.vn/company/TIP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>11</th>
+      <th>12</th>
       <td>TLG</td>
       <td>TLG - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1500 đồng/cổ phiếu</td>
       <td>2022-12-21</td>
@@ -626,14 +660,14 @@
       <td>2022-12-28</td>
       <td>1 days</td>
       <td>49950.0</td>
-      <td>49800.0</td>
-      <td>3.01</td>
-      <td>-0.30</td>
+      <td>49600.0</td>
+      <td>3.02</td>
+      <td>-0.70</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=TLG" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/TLG" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>12</th>
+      <th>13</th>
       <td>HNP</td>
       <td>HNP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-20</td>
@@ -650,7 +684,7 @@
       <td><a href="https://simplize.vn/company/HNP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>13</th>
+      <th>14</th>
       <td>AGR</td>
       <td>AGR - Phát hành cổ phiếu thưởng tỷ lệ 1.602%</td>
       <td>2022-12-20</td>
@@ -660,14 +694,14 @@
       <td>2022-12-27</td>
       <td>0 days</td>
       <td>8550.0</td>
-      <td>7390.0</td>
+      <td>7400.0</td>
       <td>0.00</td>
-      <td>-13.57</td>
+      <td>-13.45</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=AGR" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/AGR" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>14</th>
+      <th>15</th>
       <td>HLD</td>
       <td>HLD - Trả cổ tức Cả năm năm 2021 bằng tiền 1200 đồng/cổ phiếu</td>
       <td>2022-12-16</td>
@@ -684,7 +718,7 @@
       <td><a href="https://simplize.vn/company/HLD" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>15</th>
+      <th>16</th>
       <td>BFC</td>
       <td>BFC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 600 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -694,14 +728,14 @@
       <td>2023-01-16</td>
       <td>20 days</td>
       <td>19200.0</td>
-      <td>17000.0</td>
-      <td>3.53</td>
-      <td>-11.46</td>
+      <td>17050.0</td>
+      <td>3.52</td>
+      <td>-11.20</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=BFC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/BFC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>16</th>
+      <th>17</th>
       <td>PAI</td>
       <td>PAI - Trả cổ tức Cả năm năm 2021 bằng tiền 800 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -718,7 +752,7 @@
       <td><a href="https://simplize.vn/company/PAI" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>17</th>
+      <th>18</th>
       <td>DHP</td>
       <td>DHP - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-14</td>
@@ -735,7 +769,7 @@
       <td><a href="https://simplize.vn/company/DHP" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>18</th>
+      <th>19</th>
       <td>SAB</td>
       <td>SAB - Trả cổ tức Đợt 2 năm 2022 bằng tiền 1000 đồng/cổ phiếu</td>
       <td>2022-12-07</td>
@@ -745,14 +779,14 @@
       <td>2023-03-01</td>
       <td>64 days</td>
       <td>177327.0</td>
-      <td>176000.0</td>
+      <td>175500.0</td>
       <td>0.57</td>
-      <td>-0.75</td>
+      <td>-1.03</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=SAB" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/SAB" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>19</th>
+      <th>20</th>
       <td>DRC</td>
       <td>DRC - Trả cổ tức Đợt 1 năm 2022 bằng tiền 500 đồng/cổ phiếu</td>
       <td>2022-12-05</td>
@@ -762,14 +796,14 @@
       <td>2023-01-10</td>
       <td>14 days</td>
       <td>22000.0</td>
-      <td>20350.0</td>
+      <td>20300.0</td>
       <td>2.46</td>
-      <td>-7.50</td>
+      <td>-7.73</td>
       <td><a href="https://tcinvest.tcbs.com.vn/tc-price/tc-analysis/technical?ticker=DRC" target="_blank" rel="noopener noreferrer"> TCInvest </a></td>
       <td><a href="https://simplize.vn/company/DRC" target="_blank" rel="noopener noreferrer"> Simplize </a></td>
     </tr>
     <tr>
-      <th>20</th>
+      <th>21</th>
       <td>HFB</td>
       <td>HFB - Trả cổ tức Đợt 1 năm 2022 bằng tiền 400 đồng/cổ phiếu</td>
       <td>2022-12-02</td>
